--- a/OuterWildsHebrewTranslation/manifest.json
+++ b/OuterWildsHebrewTranslation/manifest.json
@@ -2,7 +2,7 @@
   "$schema": "https://raw.githubusercontent.com/ow-mods/owml/master/schemas/manifest_schema.json",
   "filename": "OuterWildsHebrewTranslation.dll",
   "author": "S.Zuk",
-  "name": "OuterWildsHebrewTranslation",
+  "name": "Hebrew Translation",
   "uniqueName": "S.Zuk.OuterWildsHebrewTranslation",
   "version": "0.1.0",
   "owmlVersion": "2.9.0",
